# microbio-boilerplate

./: .editorconfig  .rustfmt.toml  Cargo.toml
adapters-incoming/cli/: Cargo.toml
adapters-incoming/graphql/: Cargo.toml
adapters-incoming/grpc/: Cargo.toml
adapters-incoming/rest/: Cargo.toml
adapters-outgoing/http/: Cargo.toml
adapters-outgoing/notify/: Cargo.toml
adapters-outgoing/persistence/: Cargo.toml
application/: Cargo.toml
application/src/: lib.rs
domain/: Cargo.toml
domain/src/: entity.rs  identity.rs  lib.rs  repository.rs
microbio/: Cargo.toml
