[package]
name = "microbio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
microbio-cli = { version = "0.1.0", path = "../adapters-incoming/cli" }
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
