[package]
name = "microbio-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt", "macros"] }
